@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.382 2005/11/17 20:56:15 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.383 2005/11/17 22:04:26 rocket Exp $
+
+  17 Nov 2005; Eric Edgar <rocket@gentoo.org> catalyst,
+  modules/generic_stage_target.py:
+  Move checks of running catalyst into the target which is simpler
 
   17 Nov 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
